# HAI823I_NomRigide

./: .gitignore  CMakeLists.txt  README.md  cmakebuild.sh  compileandrun.sh  imgui.ini
ressources/shaders/: fragment_shader.glsl  fragment_simple.glsl  vertex_shader.glsl  vertex_simple.glsl
src/: Camera.cpp  Camera.hpp  CameraHelper.hpp  DynamicObject.cpp  DynamicObject.hpp  Mesh.cpp  Mesh.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Transformation.hpp  main.cpp
